--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -6,6 +6,7 @@ name: CI
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
   pull_request_review:
+  pull_request:
 jobs:
   # This workflow contains a single job called "build"
   build:
@@ -17,6 +18,7 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
       - uses: wechuli/actionsutils@main
+      - run: echo "${{ github.event.pull_request.head.ref }}"
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
