--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -6,7 +6,7 @@ name: CI
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
   pull_request_review:
-  pull_request:
+  pull_request_target:
 jobs:
   # This workflow contains a single job called "build"
   build:
